--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson-112</title>
-</head>
-<body>
+   	<title>Lesson-112</title>
+   	<link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     
-</body>
+    <div class="block">
+        <button class="btn">Animation</button>
+        <div class="wrapper">
+            <div class="box"></div>
+        </div>
+    </div>
+
+	<script src="script.js"></script>
+  </body>
 </html>
